[gd_scene load_steps=4 format=2]

[ext_resource path="res://native/SystemEditor.gdns" type="Script" id=1]
[ext_resource path="res://scene/Main.gd" type="Script" id=2]
[ext_resource path="res://component/Camera.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="SystemEditor" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 42.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 20 )
text = "Hide"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_left = 0.01
anchor_top = 0.08
anchor_right = 0.05
anchor_bottom = 0.1
margin_left = -0.200001
margin_right = 105.8
margin_bottom = 48.0
rect_min_size = Vector2( 128, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generate" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 213.0
margin_bottom = 20.0
text = "Generate Systems"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Merge" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 24.0
margin_right = 213.0
margin_bottom = 44.0
text = "Merge Systems & Save Old Idx"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 48.0
margin_right = 213.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveEditor" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_right = 104.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadEditor" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Load Editor"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 72.0
margin_right = 213.0
margin_bottom = 92.0

[node name="SaveFinal" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_right = 104.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save Final"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadOriginal" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 108.0
margin_right = 213.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Load Original"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 96.0
margin_right = 213.0
margin_bottom = 100.0

[node name="Seed" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 104.0
margin_right = 213.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Seed"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Seed:"

[node name="Seed" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/Seed"]
margin_left = 155.0
margin_right = 213.0
margin_bottom = 24.0
text = "-1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bound" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 132.0
margin_right = 213.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Bound"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Bound:"

[node name="Bound" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/Bound"]
margin_left = 155.0
margin_right = 213.0
margin_bottom = 24.0
text = "1024"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadiusMin" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 160.0
margin_right = 213.0
margin_bottom = 184.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/RadiusMin"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Radius min:"

[node name="RadiusMin" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/RadiusMin"]
margin_left = 155.0
margin_right = 213.0
margin_bottom = 24.0
text = "32"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadiusMax" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 188.0
margin_right = 213.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/RadiusMax"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Radius max:"

[node name="RadiusMax" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/RadiusMax"]
margin_left = 155.0
margin_right = 213.0
margin_bottom = 24.0
text = "128"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistanceMin" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 216.0
margin_right = 213.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/DistanceMin"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Distance min:"

[node name="DistanceMin" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/DistanceMin"]
margin_left = 155.0
margin_right = 213.0
margin_bottom = 24.0
text = "16"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Density" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 244.0
margin_right = 213.0
margin_bottom = 268.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Density"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Density Multiplier:"

[node name="Density" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/Density"]
margin_left = 155.0
margin_right = 213.0
margin_bottom = 24.0
text = "1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 272.0
margin_right = 213.0
margin_bottom = 296.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/Size"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Size multiplier (weight):"

[node name="Size" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/Size"]
margin_left = 155.0
margin_right = 213.0
margin_bottom = 24.0
text = "1"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 0.9
anchor_bottom = 0.9
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_top = 13.0
margin_right = 103.0
margin_bottom = 27.0
text = "Time multiplier:"

[node name="TimeMultiplier" type="LineEdit" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 107.0
margin_right = 165.0
margin_bottom = 40.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 169.0
margin_right = 173.0
margin_bottom = 40.0

[node name="Tick" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 177.0
margin_top = 13.0
margin_right = 210.0
margin_bottom = 27.0
text = "Tick: "

[node name="SetTick" type="LineEdit" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 214.0
margin_right = 272.0
margin_bottom = 40.0
placeholder_text = "set tick"

[node name="Save" type="FileDialog" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -170.0
margin_right = 350.0
margin_bottom = 170.0
rect_min_size = Vector2( 700, 340 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
dialog_hide_on_ok = true
access = 2
current_dir = "/home/username/dev/eos/system-editor/godot"
current_path = "/home/username/dev/eos/system-editor/godot/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="FileDialog" parent="CanvasLayer/Control"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -170.0
margin_right = 350.0
margin_bottom = 170.0
rect_min_size = Vector2( 700, 340 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.bin" )
current_dir = "/home/username/dev/eos/system-editor/godot"
current_path = "/home/username/dev/eos/system-editor/godot/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/Hide" to="." method="_on_Hide_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Generate" to="." method="_on_Generate_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Merge" to="." method="_on_Merge_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/SaveEditor" to="." method="_on_SaveEditor_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/LoadEditor" to="." method="_on_LoadEditor_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/SaveFinal" to="." method="_on_SaveFinal_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer2/LoadOriginal" to="." method="_on_LoadOriginal_pressed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/Seed/Seed" to="." method="_on_Seed_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/Bound/Bound" to="." method="_on_bound_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/RadiusMin/RadiusMin" to="." method="_on_RadiusMin_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/RadiusMax/RadiusMax" to="." method="_on_RadiusMax_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/DistanceMin/DistanceMin" to="." method="_on_DistanceMin_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/Density/Density" to="." method="_on_Density_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/Size/Size" to="." method="_on_Size_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/HBoxContainer/TimeMultiplier" to="." method="_on_TimeMultiplier_text_changed"]
[connection signal="text_changed" from="CanvasLayer/Control/HBoxContainer/SetTick" to="." method="_on_SetTick_text_changed"]
[connection signal="confirmed" from="CanvasLayer/Control/Save" to="." method="_on_Save_confirmed"]
[connection signal="confirmed" from="CanvasLayer/Control/Load" to="." method="_on_Load_confirmed"]
